--- a/UIKit/ToDoList 12/ToDoList 12/Base.lproj/Main.storyboard
+++ b/UIKit/ToDoList 12/ToDoList 12/Base.lproj/Main.storyboard
@@ -116,9 +116,9 @@
                                                                 <constraint firstAttribute="width" constant="34" id="08S-8Y-eey"/>
                                                                 <constraint firstAttribute="height" constant="34" id="Ob3-H0-VHI"/>
                                                             </constraints>
-                                                            <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <color key="tintColor" systemColor="labelColor"/>
                                                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                            <state key="normal" backgroundImage="circles.grid"/>
+                                                            <state key="normal" backgroundImage="circles.grid.svg"/>
                                                             <connections>
                                                                 <action selector="editTaskBtnClicked:" destination="R9g-mh-nrq" eventType="touchUpInside" id="ZCv-hG-caa"/>
                                                             </connections>
@@ -270,7 +270,7 @@
     </scenes>
     <resources>
         <image name="circle" catalog="system" width="128" height="123"/>
-        <image name="circles.grid" width="46" height="46"/>
+        <image name="circles.grid.svg" width="46" height="46"/>
         <image name="gearshape.fill" catalog="system" width="128" height="123"/>
         <image name="iphone.gen1" catalog="system" width="112" height="128"/>
         <image name="moon" catalog="system" width="128" height="123"/>
