--- a/UIKit/ToDoList 12/ToDoList 12/Base.lproj/Main.storyboard
+++ b/UIKit/ToDoList 12/ToDoList 12/Base.lproj/Main.storyboard
@@ -26,16 +26,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1V1-vW-eYL">
-                                <rect key="frame" x="0.0" y="0.0" width="390" height="145.66666666666666"/>
+                                <rect key="frame" x="0.0" y="0.0" width="390" height="146"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20 November 2022" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kiv-bD-irr">
-                                        <rect key="frame" x="112.33333333333333" y="109" width="165.33333333333337" height="21.666666666666657"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tasks" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kiv-bD-irr">
+                                        <rect key="frame" x="170.33333333333334" y="109" width="49.333333333333343" height="22"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O77-cD-7Pm">
-                                        <rect key="frame" x="329.66666666666669" y="102.66666666666667" width="50.333333333333314" height="34.333333333333329"/>
+                                        <rect key="frame" x="329.66666666666669" y="103" width="50.333333333333314" height="34.333333333333343"/>
                                         <color key="tintColor" systemColor="labelColor"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="gearshape.fill" catalog="system" title=""/>
@@ -55,7 +55,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="EIC-Iw-glJ">
-                                <rect key="frame" x="0.0" y="145.66666666666669" width="390" height="630.33333333333326"/>
+                                <rect key="frame" x="0.0" y="146" width="390" height="630"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TaskTableViewCell" rowHeight="179" id="R9g-mh-nrq" customClass="TaskTableViewCell" customModule="ToDoList_12" customModuleProvider="target">
@@ -198,7 +198,7 @@
                                 <rect key="frame" x="15" y="322" width="360" height="200"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BBu-5X-QwQ">
-                                        <rect key="frame" x="25" y="30" width="80" height="29"/>
+                                        <rect key="frame" x="24.999999999999993" y="30" width="79.333333333333314" height="29"/>
                                         <fontDescription key="fontDescription" name="Assistant-Bold" family="Assistant" pointSize="22"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -250,7 +250,7 @@
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="eTz-fG-1eJ"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.90000000000000002" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Rtv-DM-Dde" firstAttribute="centerY" secondItem="sdX-rK-NVI" secondAttribute="centerY" id="LLs-6X-prB"/>
                             <constraint firstItem="eTz-fG-1eJ" firstAttribute="trailing" secondItem="Rtv-DM-Dde" secondAttribute="trailing" constant="15" id="OZp-vo-NCj"/>
@@ -260,6 +260,7 @@
                     <connections>
                         <outlet property="appThemeLbl" destination="gVM-lC-jT5" id="DzN-WY-SAp"/>
                         <outlet property="modalView" destination="Rtv-DM-Dde" id="4Z0-aT-czW"/>
+                        <outlet property="segmentedControl" destination="33b-HN-iRK" id="Twq-CA-bXa"/>
                         <outlet property="settingsTitleLbl" destination="BBu-5X-QwQ" id="lu1-dd-4DT"/>
                     </connections>
                 </viewController>
